gcc/testsuite/g++.dg/init/enum2.C
@@ -1,0 +1,9 @@
+#include <limits.h>
+enum test {
+  z = 0,
+  c = UINT_MAX + 1LL
+} x = z;
+
+int main() {
+  return x != z;
+}
